// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link External link matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 .link {
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0.external {
  color: #0080a5;
}

.c0.external .link {
  color: #0080a5;
}

.c0.external .link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external .link:visited {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation .link {
  color: #57666e;
}

.c0.navigation .link:hover {
  color: #000;
}

.c0.navigation .link:hover ~ svg {
  color: #000;
}

.c0.navigation .link:active {
  color: #0080a5;
  font-weight: 600;
}

.c0.navigation .link:active ~ svg {
  color: #0080a5;
}

<div
  className="c0 external"
>
  <a
    className="link"
    href="https://github.com/"
  >
    External Link
  </a>
</div>
`;

exports[`Link External link with icon matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 .link {
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0 0 0 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0.external {
  color: #0080a5;
}

.c0.external .link {
  color: #0080a5;
}

.c0.external .link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external .link:visited {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation .link {
  color: #57666e;
}

.c0.navigation .link:hover {
  color: #000;
}

.c0.navigation .link:hover ~ svg {
  color: #000;
}

.c0.navigation .link:active {
  color: #0080a5;
  font-weight: 600;
}

.c0.navigation .link:active ~ svg {
  color: #0080a5;
}

<div
  className="c0 external"
>
  <a
    className="link"
    href="https://github.com/"
  >
    External Link
  </a>
  <svg
    color="currentColor"
    height="16"
    width="16"
  />
</div>
`;

exports[`Link Navigation link matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 .link {
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0.external {
  color: #0080a5;
}

.c0.external .link {
  color: #0080a5;
}

.c0.external .link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external .link:visited {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation .link {
  color: #57666e;
}

.c0.navigation .link:hover {
  color: #000;
}

.c0.navigation .link:hover ~ svg {
  color: #000;
}

.c0.navigation .link:active {
  color: #0080a5;
  font-weight: 600;
}

.c0.navigation .link:active ~ svg {
  color: #0080a5;
}

<div
  className="c0 navigation"
>
  <a
    aria-current="page"
    className="link active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    Navigation Link
  </a>
</div>
`;

exports[`Link Navigation link with icon matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 .link {
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0 0 0 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0.external {
  color: #0080a5;
}

.c0.external .link {
  color: #0080a5;
}

.c0.external .link:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external .link:visited {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation .link {
  color: #57666e;
}

.c0.navigation .link:hover {
  color: #000;
}

.c0.navigation .link:hover ~ svg {
  color: #000;
}

.c0.navigation .link:active {
  color: #0080a5;
  font-weight: 600;
}

.c0.navigation .link:active ~ svg {
  color: #0080a5;
}

<div
  className="c0 navigation"
>
  <a
    aria-current={null}
    className="link"
    href="/story"
    onClick={[Function]}
  >
    Navigation Link
  </a>
  <svg
    color="currentColor"
    height="16"
    width="16"
  />
</div>
`;
